--- a/index.html
+++ b/index.html
@@ -2,13 +2,33 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Template</title>
+	<title>test sass</title>
 	<link rel="stylesheet" href="css/style-base.css">
+	<link rel="stylesheet" href="css/style.css">
 	<script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
 	<!-- <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script> -->
-	<script type="text/javascript" src="js/script.js"></script>
 </head>
 <body>
-	
+	<div class="flex">
+	<label for="r1" >r</label>
+	<input type="range" max="255" min="0" value="254" name="r1" id="r1" >
+	<label for="g1" >g</label>
+	<input type="range" max="255" min="0" value="254" name="g1" id="g1" >
+	<label for="b1" >b</label>
+	<input type="range" max="255" min="0" value="254" name="b1" id="b1" >
+	</div>
+	<div class="flex">
+	<label for="r2" >r</label>
+	<input type="range" max="255" min="0" value="1" name="r2" id="r2" >
+	<label for="g2" >g</label>
+	<input type="range" max="255" min="0" value="1" name="g2" id="g2" >
+	<label for="b2" >b</label>
+	<input type="range" max="255" min="0" value="1" name="b2" id="b2" >
+	</div>
+	<div class="flex">
+	<label for="degr" >Angle</label>
+	<input type="range" max="360" min="0" value="180" name="degr" id="degr" >
+	</div>
 </body>
+<script type="text/javascript" src="js/script.js"></script>
 </html>
