--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 </head>
 <body>
+<div id="bg">
+	
 	<div class="flex">
 	<label for="r1" >r</label>
 	<input type="range" max="255" min="0" value="254" name="r1" id="r1" >
@@ -29,6 +31,7 @@
 	<label for="degr" >Angle</label>
 	<input type="range" max="360" min="0" value="180" name="degr" id="degr" >
 	</div>
+</div>
 </body>
 <script type="text/javascript" src="js/script.js"></script>
 </html>
