--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<title>test sass</title>
 	<link rel="stylesheet" href="css/style-base.css">
 	<link rel="stylesheet" href="css/style.css">
-	<script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
-	<!-- <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script> -->
+	<!-- <script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script> -->
+	<script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 </head>
 <body>
 <div id="bg">
