--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
 	
 	<div class="flex">
 	<label for="r1" >r</label>
-	<input type="range" max="255" min="0" value="254" name="r1" id="r1" >
+	<input type="range" max="255" min="0" value="254" name="r1" id="r1" ><span></span>
 	<label for="g1" >g</label>
-	<input type="range" max="255" min="0" value="254" name="g1" id="g1" >
+	<input type="range" max="255" min="0" value="254" name="g1" id="g1" ><span></span>
 	<label for="b1" >b</label>
-	<input type="range" max="255" min="0" value="254" name="b1" id="b1" >
+	<input type="range" max="255" min="0" value="254" name="b1" id="b1" ><span></span>
 	</div>
 	<div class="flex">
 	<label for="r2" >r</label>
-	<input type="range" max="255" min="0" value="1" name="r2" id="r2" >
+	<input type="range" max="255" min="0" value="1" name="r2" id="r2" ><span></span>
 	<label for="g2" >g</label>
-	<input type="range" max="255" min="0" value="1" name="g2" id="g2" >
+	<input type="range" max="255" min="0" value="1" name="g2" id="g2" ><span></span>
 	<label for="b2" >b</label>
-	<input type="range" max="255" min="0" value="1" name="b2" id="b2" >
+	<input type="range" max="255" min="0" value="1" name="b2" id="b2" ><span></span>
 	</div>
 	<div class="flex">
 	<label for="degr" >Angle</label>
