--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 	</div>
 	<div class="flex">
 	<label for="degr" >Angle</label>
-	<input type="range" max="360" min="0" value="45" name="degr" id="degr" >
+	<input type="range" max="360" min="0" value="45" name="degr" id="degr" ><span></span>
+	<button id="rand">rand</button>
 	</div>
 </div>
 </body>
